# Backend

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
docs/: new-service-cpp.md  new-service-python.md  openapi.yml
infra/: entrypoint.sh  gen-keys.sh  gen-openapi.sh  k3s-install.sh  migrate.sh  new-service-cpp.sh  new-service-python.sh
infra/helm/: values-service-auth.yaml  values-service-core.yaml  values-service-test-python.yaml
infra/helm/generic-service/: Chart.yaml  values.yaml
infra/helm/generic-service/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingressroute.yaml  middleware-cors.yaml  migrations-configmap.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
infra/traefik/: dynamic.yml
libs/common/: CMakeLists.txt
libs/common/include/common/: helpers.h  jwt_filter.h  jwt_verifier.h
libs/common/src/: jwt_filter.cc  jwt_verifier.cc
services/service-auth/: CMakeLists.txt  Dockerfile  config.json.tpl
services/service-auth/include/: auth_controller.h  helpers.h  jwt_issuer.h  password.h
services/service-auth/migrations/: 001_init.sql
services/service-auth/src/: jwt_issuer.cc  main.cc  password.cc
services/service-auth/src/auth/: health.cc  login.cc  public_key.cc  register.cc
services/service-core/: CMakeLists.txt  Dockerfile  config.json.tpl
services/service-core/include/: core_controller.h
services/service-core/migrations/: 001_init.sql
services/service-core/src/: main.cc
services/service-core/src/core/: compute.cc  health.cc  status.cc
services/service-test-python/: Dockerfile  pyproject.toml
services/service-test-python/app/: main.py
